--- a/my app/app/src/main/res/layout/activity_adminlogin.xml
+++ b/my app/app/src/main/res/layout/activity_adminlogin.xml
@@ -81,7 +81,7 @@
         app:layout_constraintTop_toBottomOf="@+id/constraintLayout1">
 
         <TextView
-            android:id="@+id/textView"
+            android:id="@+id/nameOfPackage"
             android:layout_width="89dp"
             android:layout_height="match_parent"
             android:paddingTop="10dp"
@@ -102,7 +102,7 @@
             android:inputType="textPassword"
 
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toEndOf="@+id/textView"
+            app:layout_constraintStart_toEndOf="@+id/nameOfPackage"
             app:layout_constraintTop_toTopOf="parent" />
 
     </android.support.constraint.ConstraintLayout>
