--- a/my app/app/src/main/res/layout/activity_rating.xml
+++ b/my app/app/src/main/res/layout/activity_rating.xml
@@ -27,7 +27,7 @@
         android:textColor="@android:color/background_light" />
 
     <TextView
-        android:id="@+id/textView"
+        android:id="@+id/nameOfPackage"
         android:layout_width="342dp"
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
