--- a/my app/app/src/main/res/layout/content_display_message.xml
+++ b/my app/app/src/main/res/layout/content_display_message.xml
@@ -9,7 +9,7 @@
     tools:showIn="@layout/activity_display_message">
 
     <TextView
-        android:id="@+id/textView"
+        android:id="@+id/nameOfPackage"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
