--- a/my app/app/src/main/res/layout/fragment_user_account.xml
+++ b/my app/app/src/main/res/layout/fragment_user_account.xml
@@ -61,7 +61,7 @@
                     android:text="Guide Rating" />
 
                 <Button
-                    android:id="@+id/changePassword"
+                    android:id="@+id/changepassword"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text="Change Password" />
