--- a/my app/app/src/main/res/layout/fragment_user_homefragment.xml
+++ b/my app/app/src/main/res/layout/fragment_user_homefragment.xml
@@ -16,6 +16,7 @@
             android:layout_height="wrap_content">
 
             <LinearLayout
+                android:id="@+id/linearLayout3"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:orientation="horizontal">
@@ -24,38 +25,81 @@
                     android:id="@+id/imageView6"
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
+                    android:layout_marginLeft="5sp"
                     android:layout_weight="1"
                     android:src="@mipmap/ic_launcher_round" />
 
                 <LinearLayout
-                    android:layout_height="match_parent"
                     android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:layout_marginLeft="5sp"
                     android:layout_weight="3"
                     android:orientation="vertical">
 
                     <TextView
                         android:id="@+id/nameString"
-                        android:layout_marginTop="3sp"
-                        android:textSize="17sp"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:text="TextView" />
+                        android:layout_marginTop="3sp"
+                        android:text="TextView"
+                        android:textSize="17sp" />
 
                     <TextView
                         android:id="@+id/textView18"
-                        android:layout_marginTop="4sp"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
+                        android:layout_marginTop="4sp"
                         android:text="It's Time to Explore the World" />
+
                     <TextView
                         android:id="@+id/textView19"
                         android:layout_width="match_parent"
-                        android:textSize="15sp"
                         android:layout_height="wrap_content"
-                        android:text="BE THERE, DO THAT!" />
+                        android:text="BE THERE, DO THAT!"
+                        android:textSize="15sp" />
                 </LinearLayout>
 
             </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="fill_parent"
+                android:layout_height="fill_parent"
+                android:layout_marginTop="8dp"
+                android:gravity="center_horizontal"
+                android:orientation="vertical"
+                android:padding="5dp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.5"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/linearLayout3">
+                <android.support.v7.widget.CardView
+                    android:layout_width="fill_parent"
+                    android:layout_height="245dp"
+                    android:layout_gravity="center_horizontal"
+                    app:cardElevation="4dp"
+                    app:cardCornerRadius="5dp">
+
+                    <ImageView
+                        android:id="@+id/imageOfPackage"
+                        android:layout_width="fill_parent"
+                        android:layout_height="190dp"
+                        android:background="@drawable/dark"
+                        android:contentDescription="TODO"
+                        android:scaleType="centerCrop" />
+
+                    <TextView
+                        android:id="@+id/nameOfPackage"
+                        android:layout_width="fill_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center_horizontal"
+                        android:layout_marginLeft="5dp"
+                        android:text="Photo Title"
+                        android:textAppearance="?android:attr/textAppearanceMedium"
+                        android:textColor="#fff" />
+
+                </android.support.v7.widget.CardView>
+            </LinearLayout>
         </android.support.constraint.ConstraintLayout>
     </ScrollView>
+
 </FrameLayout>
