--- a/my app/app/src/main/res/layout/fragment_user_explore.xml
+++ b/my app/app/src/main/res/layout/fragment_user_explore.xml
@@ -56,7 +56,7 @@
             <ImageView
                 android:layout_width="match_parent"
                 android:layout_height="150dp"
-                android:src="@drawable/Malana"
+                android:src="@drawable/malana"
                 android:scaleType="centerCrop"/>
             <TextView
                 android:layout_width="wrap_content"
