--- a/my app/app/src/main/res/layout/activity_grate.xml
+++ b/my app/app/src/main/res/layout/activity_grate.xml
@@ -33,17 +33,21 @@
             android:id="@+id/ratingBar"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_below="@+id/textView3"
             android:layout_alignParentStart="true"
             android:layout_alignParentLeft="true"
-            android:layout_alignParentTop="true"
             android:layout_alignParentEnd="true"
             android:layout_alignParentRight="true"
-            android:layout_marginStart="95dp"
-            android:layout_marginLeft="95dp"
-            android:layout_marginTop="509dp"
-            android:layout_marginEnd="76dp"
-            android:layout_marginRight="76dp"
-            android:numStars="5" />
+            android:layout_marginStart="89dp"
+            android:layout_marginLeft="89dp"
+            android:layout_marginTop="55dp"
+            android:layout_marginEnd="82dp"
+            android:layout_marginRight="82dp"
+            android:isIndicator="true"
+            android:numStars="5"
+            android:rating="@integer/google_play_services_version"
+            android:stepSize="@integer/google_play_services_version"
+            android:visibility="visible" />
 
         <TextView
             android:id="@+id/textView3"
@@ -59,23 +63,23 @@
             android:layout_marginTop="430dp"
             android:layout_marginEnd="3dp"
             android:layout_marginRight="3dp"
-            android:text="                SO, HOW WAS YOUR JOURNEY  ?"
+            android:text="                SO, HOW WAS YOUR JOURNEY  ? "
             android:textColor="@android:color/holo_blue_dark"
             android:textSize="18sp" />
 
         <Button
             android:layout_width="100dp"
             android:layout_height="wrap_content"
+            android:layout_below="@+id/ratingBar"
             android:layout_alignParentStart="true"
             android:layout_alignParentLeft="true"
-            android:layout_alignParentTop="true"
             android:layout_alignParentEnd="true"
             android:layout_alignParentRight="true"
-            android:layout_marginStart="177dp"
-            android:layout_marginLeft="177dp"
-            android:layout_marginTop="655dp"
-            android:layout_marginEnd="134dp"
-            android:layout_marginRight="134dp"
+            android:layout_marginStart="159dp"
+            android:layout_marginLeft="159dp"
+            android:layout_marginTop="49dp"
+            android:layout_marginEnd="152dp"
+            android:layout_marginRight="152dp"
             android:background="@drawable/border2"
             android:onClick="Thankyou"
             android:text="Rate !"
