--- a/my app/app/src/main/res/layout/activity_rating.xml
+++ b/my app/app/src/main/res/layout/activity_rating.xml
@@ -42,7 +42,7 @@
         android:layout_marginRight="37dp"
         android:gravity="center"
         android:text="List Of Our Guides"
-        android:textColor="@android:color/background_light"
+        android:textColor="@color/common_google_signin_btn_text_dark_focused"
         android:textSize="35sp"
         android:visibility="visible"
         tools:text="List Of Our Guides " />
